--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,225 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  height: 100vh;
-  background-color: rgb(223, 213, 213);
-  justify-content: center;
-  align-items: center;
+.hidden-categories {
+  width: 300px;
+  height: 520px;
   display: flex;
-}
-
-.login-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  gap: 10px;
+  padding-top: 20px;
+
+  font-family: "Josefin Sans", sans-serif;
+}
+.hidden-categories-container {
+  height: 400px;
+
+  overflow-y: auto;
+  width: 300px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  border-radius: 20px;
+  padding-left: 20px;
+  position: absolute;
+  left: 220px;
+  top: 70px;
+  background-color: white;
+
+  z-index: 2;
+}
+.searchBox {
+  position: absolute;
+  z-index: 3;
+  gap: 10px;
+  display: flex;
+  left: 500px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  top: 70px;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
+.addBtn {
+  border-radius: 50px;
+  background-color: rgb(5, 147, 5);
+  color: white;
+}
+.cartContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-direction: column;
+}
+.remove-card {
+  position: absolute !important;
+  bottom: 0;
+  right: 5px;
+  bottom: 5px !important;
+  color: red !important;
+}
+.price-btn {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+.cartContainer img {
+  width: 180px;
+  height: 150px;
+}
+.cont {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  height: 200px;
+  width: 450px;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  position: relative;
+  padding: 20px;
+}
+.icon {
+  width: 40px;
+  height: 80px;
+  color: rgb(8, 88, 88);
+}
+.profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  gap: 100px;
+}
+.userKey {
+  color: rgb(141, 22, 129);
+}
+.danger {
+  color: red;
+}
+.flex-cont {
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin-left: 35%;
+}
+.input {
+  height: 40px;
+  border: none;
+  text-align: center;
+  width: 60px;
+
+  color: gray;
+}
+.user-info {
+  color: rgb(126, 7, 27);
+}
+.star {
+  color: green;
+}
+.user-table {
+  display: flex;
+  width: 400px;
+  gap: 50px;
+  justify-content: space-between;
+  height: 60px;
+  align-items: center;
+}
+.save-changes-link {
+  text-decoration: none;
+}
+.qty {
+  position: absolute;
+  top: 0;
+  right: 10px;
+}
+.cont img {
+  width: 80px;
+  height: 80px;
+  border-radius: 20px;
+}
+.cont-titles {
+  width: 200px;
+}
+.cont-titles p {
+  color: gray;
+}
+.arrow {
+  width: 20px;
+  height: 20px;
+  background-color: rgb(0, 90, 131);
+  transform: rotate(45deg);
+  position: absolute;
+  top: -9px;
+  right: 160px;
+}
+.panel {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  position: fixed;
+  align-self: flex-start;
+  left: 0;
+  top: 100px;
+  margin-left: 20px;
+}
+.map-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.map-container p {
+  width: 500px;
+  color: gray;
+}
+.totalCount {
+  width: 380px;
+  height: 302px;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
+    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+
+  gap: 30px;
+}
+.total-icons img {
+  width: 30px;
+  height: 22px;
+}
+.total-box {
+  display: flex;
+  gap: 5px;
+}
+.total-icons {
+  width: 40px;
+  height: 30px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px,
+    rgb(209, 213, 219) 0px 0px 0px 1px inset;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.coupon {
+  width: 247px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+  display: flex;
+  height: 40px;
+  justify-content: space-between;
+  background-color: white;
+}
+.coupon input {
+  width: 100%;
+  font-style: italic;
+  border: none;
+}
+.coupon button {
+  background-color: white;
+  border: none;
 }
