--- a/src/App.css
+++ b/src/App.css
@@ -223,3 +223,10 @@
   background-color: white;
   border: none;
 }
+.body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
